tests/mtcp/error/error-mtcp-error7.pkt
// DO NOT delete or add line in this file

// Establish a connection.
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0

+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0

+0  < S 0:0(0) win 32792 <mss 1000,sackOK,TS val 100 ecr 0,nop,wscale 7>
+0 ~ +1  > S. 0:0(0) ack 1 <...>

+.1 < . 1:1(0) ack 1 win 14702 <nop, nop, TS val 1986949481 ecr 1718247791>
+0.2 accept(3, ..., ...) = 4
+0 fcntl(4, F_SETFL, O_RDWR|O_NONBLOCK) = 0

+0 < . 1:9123(9122) ack 1 win 28265
// ack error to see whether ecr is correct
+0.1 > . 1:1(0) ack 1 <nop,nop, TS val 1986949481 ecr 1986949481>
